@@ -18,7 +18,7 @@ import com.openmemind.ai.memory.core.data.MemoryInsight;
 import com.openmemind.ai.memory.core.data.MemoryInsightType;
 import com.openmemind.ai.memory.core.data.MemoryItem;
 import com.openmemind.ai.memory.core.data.MemoryRawData;
-import com.openmemind.ai.memory.core.data.enums.MemoryScope;
+import com.openmemind.ai.memory.core.data.enums.InsightTier;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -29,35 +29,26 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
- * In-memory implementation of MemoryStore
- *
+ * In-memory implementation of {@link MemoryStore}.
  */
 public class InMemoryMemoryStore implements MemoryStore {
 
     private final Map<String, Map<String, MemoryRawData>> rawDataStore = new ConcurrentHashMap<>();
     private final Map<String, Map<Long, MemoryItem>> itemStore = new ConcurrentHashMap<>();
-    private final Map<String, Map<String, MemoryInsightType>> insightTypeStore =
-            new ConcurrentHashMap<>();
+    private final Map<String, MemoryInsightType> insightTypeStore = new ConcurrentHashMap<>();
     private final Map<String, Map<Long, MemoryInsight>> insightStore = new ConcurrentHashMap<>();
 
     private String key(MemoryId id) {
         return id.toIdentifier();
     }
 
-    // ===== MemoryRawData =====
-
     @Override
-    public void saveRawData(MemoryId id, MemoryRawData rawData) {
-        rawDataStore
-                .computeIfAbsent(key(id), k -> new ConcurrentHashMap<>())
-                .put(rawData.id(), rawData);
-    }
-
-    @Override
-    public void saveRawDataList(MemoryId id, List<MemoryRawData> rawDataList) {
+    public void upsertRawData(MemoryId id, List<MemoryRawData> rawDataList) {
+        if (rawDataList == null || rawDataList.isEmpty()) {
+            return;
+        }
         Map<String, MemoryRawData> map =
                 rawDataStore.computeIfAbsent(key(id), k -> new ConcurrentHashMap<>());
         rawDataList.forEach(rawData -> map.put(rawData.id(), rawData));
@@ -69,11 +60,6 @@ public class InMemoryMemoryStore implements MemoryStore {
     }
 
     @Override
-    public List<MemoryRawData> getAllRawData(MemoryId id) {
-        return List.copyOf(rawDataStore.getOrDefault(key(id), Map.of()).values());
-    }
-
-    @Override
     public Optional<MemoryRawData> getRawDataByContentId(MemoryId id, String contentId) {
         return rawDataStore.getOrDefault(key(id), Map.of()).values().stream()
                 .filter(r -> Objects.equals(r.contentId(), contentId))
@@ -81,11 +67,8 @@ public class InMemoryMemoryStore implements MemoryStore {
     }
 
     @Override
-    public void deleteRawData(MemoryId id, String rawDataId) {
-        Map<String, MemoryRawData> map = rawDataStore.get(key(id));
-        if (map != null) {
-            map.remove(rawDataId);
-        }
+    public List<MemoryRawData> listRawData(MemoryId id) {
+        return List.copyOf(rawDataStore.getOrDefault(key(id), Map.of()).values());
     }
 
     @Override
@@ -121,58 +104,18 @@ public class InMemoryMemoryStore implements MemoryStore {
                 });
     }
 
-    // ===== MemoryItem =====
-
     @Override
-    public void addItem(MemoryId id, MemoryItem item) {
-        itemStore.computeIfAbsent(key(id), k -> new ConcurrentHashMap<>()).put(item.id(), item);
-    }
-
-    @Override
-    public void addItems(MemoryId id, List<MemoryItem> items) {
+    public void insertItems(MemoryId id, List<MemoryItem> items) {
+        if (items == null || items.isEmpty()) {
+            return;
+        }
         Map<Long, MemoryItem> map =
                 itemStore.computeIfAbsent(key(id), k -> new ConcurrentHashMap<>());
-        for (MemoryItem item : items) {
-            map.put(item.id(), item);
-        }
+        items.forEach(item -> map.put(item.id(), item));
     }
 
     @Override
-    public Optional<MemoryItem> getItem(MemoryId id, Long itemId) {
-        return Optional.ofNullable(itemStore.getOrDefault(key(id), Map.of()).get(itemId));
-    }
-
-    @Override
-    public Optional<MemoryItem> getItemByContentHash(MemoryId id, String contentHash) {
-        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> Objects.equals(i.contentHash(), contentHash))
-                .findFirst();
-    }
-
-    @Override
-    public List<MemoryItem> getItemsByContentHashes(MemoryId id, Collection<String> contentHashes) {
-        if (contentHashes.isEmpty()) {
-            return List.of();
-        }
-        Set<String> hashSet = new HashSet<>(contentHashes);
-        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> i.contentHash() != null && hashSet.contains(i.contentHash()))
-                .toList();
-    }
-
-    @Override
-    public List<MemoryItem> getItemsByVectorIds(MemoryId id, Collection<String> vectorIds) {
-        if (vectorIds.isEmpty()) {
-            return List.of();
-        }
-        Set<String> idSet = new HashSet<>(vectorIds);
-        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> i.vectorId() != null && idSet.contains(i.vectorId()))
-                .toList();
-    }
-
-    @Override
-    public List<MemoryItem> getItemsByIds(MemoryId id, List<Long> itemIds) {
+    public List<MemoryItem> getItemsByIds(MemoryId id, Collection<Long> itemIds) {
         if (itemIds == null || itemIds.isEmpty()) {
             return List.of();
         }
@@ -183,7 +126,29 @@ public class InMemoryMemoryStore implements MemoryStore {
     }
 
     @Override
-    public List<MemoryItem> getAllItems(MemoryId id) {
+    public List<MemoryItem> getItemsByVectorIds(MemoryId id, Collection<String> vectorIds) {
+        if (vectorIds == null || vectorIds.isEmpty()) {
+            return List.of();
+        }
+        Set<String> idSet = new HashSet<>(vectorIds);
+        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
+                .filter(i -> i.vectorId() != null && idSet.contains(i.vectorId()))
+                .toList();
+    }
+
+    @Override
+    public List<MemoryItem> getItemsByContentHashes(MemoryId id, Collection<String> contentHashes) {
+        if (contentHashes == null || contentHashes.isEmpty()) {
+            return List.of();
+        }
+        Set<String> hashSet = new HashSet<>(contentHashes);
+        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
+                .filter(i -> i.contentHash() != null && hashSet.contains(i.contentHash()))
+                .toList();
+    }
+
+    @Override
+    public List<MemoryItem> listItems(MemoryId id) {
         return new ArrayList<>(itemStore.getOrDefault(key(id), Map.of()).values());
     }
 
@@ -193,75 +158,43 @@ public class InMemoryMemoryStore implements MemoryStore {
     }
 
     @Override
-    public List<MemoryItem> getItemsByRawDataId(MemoryId id, String rawDataId) {
-        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> Objects.equals(i.rawDataId(), rawDataId))
-                .toList();
-    }
-
-    @Override
-    public List<MemoryItem> getItemsByScope(MemoryId id, MemoryScope scope) {
-        return itemStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> i.scope() == scope)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public void updateItems(MemoryId id, List<MemoryItem> items) {
+    public void deleteItems(MemoryId id, Collection<Long> itemIds) {
+        if (itemIds == null || itemIds.isEmpty()) {
+            return;
+        }
         Map<Long, MemoryItem> map = itemStore.get(key(id));
         if (map == null) {
             return;
         }
-        for (MemoryItem item : items) {
-            if (map.containsKey(item.id())) {
-                map.put(item.id(), item);
-            }
+        itemIds.forEach(map::remove);
+    }
+
+    @Override
+    public void upsertInsightTypes(List<MemoryInsightType> insightTypes) {
+        if (insightTypes == null || insightTypes.isEmpty()) {
+            return;
         }
+        insightTypes.forEach(insightType -> insightTypeStore.put(insightType.name(), insightType));
     }
 
     @Override
-    public void deleteItem(MemoryId id, Long itemId) {
-        Map<Long, MemoryItem> map = itemStore.get(key(id));
-        if (map != null) {
-            map.remove(itemId);
+    public Optional<MemoryInsightType> getInsightType(String insightType) {
+        return Optional.ofNullable(insightTypeStore.get(insightType));
+    }
+
+    @Override
+    public List<MemoryInsightType> listInsightTypes() {
+        return new ArrayList<>(insightTypeStore.values());
+    }
+
+    @Override
+    public void upsertInsights(MemoryId id, List<MemoryInsight> insights) {
+        if (insights == null || insights.isEmpty()) {
+            return;
         }
-    }
-
-    // ===== MemoryInsightType =====
-
-    @Override
-    public void saveInsightType(MemoryId id, MemoryInsightType insightType) {
-        insightTypeStore
-                .computeIfAbsent(key(id), k -> new ConcurrentHashMap<>())
-                .put(insightType.name(), insightType);
-    }
-
-    @Override
-    public Optional<MemoryInsightType> getInsightType(MemoryId id, String insightType) {
-        return Optional.ofNullable(
-                insightTypeStore.getOrDefault(key(id), Map.of()).get(insightType));
-    }
-
-    @Override
-    public List<MemoryInsightType> getAllInsightTypes(MemoryId id) {
-        return new ArrayList<>(insightTypeStore.getOrDefault(key(id), Map.of()).values());
-    }
-
-    @Override
-    public void deleteInsightType(MemoryId id, String insightType) {
-        Map<String, MemoryInsightType> map = insightTypeStore.get(key(id));
-        if (map != null) {
-            map.remove(insightType);
-        }
-    }
-
-    // ===== MemoryInsight =====
-
-    @Override
-    public void saveInsight(MemoryId id, MemoryInsight insight) {
-        insightStore
-                .computeIfAbsent(key(id), k -> new ConcurrentHashMap<>())
-                .put(insight.id(), insight);
+        Map<Long, MemoryInsight> map =
+                insightStore.computeIfAbsent(key(id), k -> new ConcurrentHashMap<>());
+        insights.forEach(insight -> map.put(insight.id(), insight));
     }
 
     @Override
@@ -270,29 +203,54 @@ public class InMemoryMemoryStore implements MemoryStore {
     }
 
     @Override
-    public List<MemoryInsight> getAllInsights(MemoryId id) {
+    public List<MemoryInsight> listInsights(MemoryId id) {
         return new ArrayList<>(insightStore.getOrDefault(key(id), Map.of()).values());
     }
 
     @Override
-    public List<MemoryInsight> getInsightsByTypeId(MemoryId id, String insightType) {
+    public List<MemoryInsight> getInsightsByType(MemoryId id, String insightType) {
         return insightStore.getOrDefault(key(id), Map.of()).values().stream()
                 .filter(i -> Objects.equals(i.type(), insightType))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<MemoryInsight> getInsightsByScope(MemoryId id, MemoryScope scope) {
+    public List<MemoryInsight> getInsightsByTier(MemoryId id, InsightTier tier) {
         return insightStore.getOrDefault(key(id), Map.of()).values().stream()
-                .filter(i -> i.scope() == scope)
-                .collect(Collectors.toList());
+                .filter(i -> tier.equals(i.tier()))
+                .toList();
     }
 
     @Override
-    public void deleteInsight(MemoryId id, Long insightId) {
-        Map<Long, MemoryInsight> map = insightStore.get(key(id));
-        if (map != null) {
-            map.remove(insightId);
+    public Optional<MemoryInsight> getLeafByGroup(MemoryId id, String type, String group) {
+        return getInsightsByType(id, type).stream()
+                .filter(i -> InsightTier.LEAF.equals(i.tier()) && Objects.equals(group, i.group()))
+                .findFirst();
+    }
+
+    @Override
+    public Optional<MemoryInsight> getBranchByType(MemoryId id, String type) {
+        return getInsightsByType(id, type).stream()
+                .filter(i -> InsightTier.BRANCH.equals(i.tier()))
+                .findFirst();
+    }
+
+    @Override
+    public Optional<MemoryInsight> getRootByType(MemoryId id, String type) {
+        return getInsightsByType(id, type).stream()
+                .filter(i -> InsightTier.ROOT.equals(i.tier()))
+                .findFirst();
+    }
+
+    @Override
+    public void deleteInsights(MemoryId id, Collection<Long> insightIds) {
+        if (insightIds == null || insightIds.isEmpty()) {
+            return;
         }
+        Map<Long, MemoryInsight> map = insightStore.get(key(id));
+        if (map == null) {
+            return;
+        }
+        insightIds.forEach(map::remove);
     }
 }
